--- a/simple-ecommerce/Views/Product/Create.cshtml
+++ b/simple-ecommerce/Views/Product/Create.cshtml
@@ -40,7 +40,7 @@
         </div>
 
         <div class="col-md-4 mb-3">
-            <label>Image URL</label>
+            <label>Image URL(300px X 300px)</label>
             <input asp-for="Product.Image" class="form-control" type="file" />
         </div>
 
