--- a/simple-ecommerce/Views/Home/Index.cshtml
+++ b/simple-ecommerce/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
                                                 <div class="product-image">
                                                     <a href="/Home/ProductDetails?id=@item.Id">
                                                         @* <img src="/images/product/large-size/1.jpg" alt="Li's Product Image"> *@
-                                                        <img src="/images/products/@item.ImageUrl" alt="Li's Product Image">
+                                                        <img onerror="this.onerror=null;this.src='/images/products/no-image.png';" src="/images/products/@item.ImageUrl" alt="Li's Product Image">
 
                                                     </a>
                                                     <span class="sticker">New</span>
@@ -107,7 +107,7 @@
                                             <div class="col-lg-3 col-md-5 ">
                                                 <div class="product-image">
                                                     <a href="/Home/ProductDetails?id=@item.Id">
-                                                        <img src="images/product/large-size/12.jpg" alt="Li's Product Image">
+                                                        <img onerror="this.onerror=null;this.src='/images/products/no-image.png';" src="images/product/large-size/12.jpg" alt="Li's Product Image">
                                                     </a>
                                                     <span class="sticker">New</span>
                                                 </div>
