--- a/simple-ecommerce/Views/Home/ProductDetails.cshtml
+++ b/simple-ecommerce/Views/Home/ProductDetails.cshtml
@@ -8,10 +8,10 @@
                 <!-- Product Details Left -->
                 <div class="product-details-left">
                     <div class="product-details-images slider-navigation-1">
-                        <div class="lg-image">
-@*                             <a class="popup-img venobox vbox-item" href="images/product/large-size/1.jpg" data-gall="myGallery"> *@
-                            <img src="/images/products/@Model.Product.ImageUrl" alt="product image">
-@*                             </a> *@
+                        <div class="product-image" style="height:100%">
+                            <a href="/Home/ProductDetails?id=@Model.Product.Id">
+                                <img onerror="this.onerror=null;this.src='/images/products/no-image.png';" src="images/products/@Model.Product.ImageUrl" alt="Li's Product Image">
+                            </a>
                         </div>
 
                     </div>
