--- a/simple-ecommerce/Views/Home/ProductDetails.cshtml
+++ b/simple-ecommerce/Views/Home/ProductDetails.cshtml
@@ -10,7 +10,7 @@
                     <div class="product-details-images slider-navigation-1">
                         <div class="product-image" style="height:100%">
                             <a href="/Home/ProductDetails?id=@Model.Product.Id">
-                                <img onerror="this.onerror=null;this.src='/images/products/no-image.png';" src="images/products/@Model.Product.ImageUrl" alt="Li's Product Image">
+                                <img onerror="this.onerror=null;this.src='/images/products/no-image.png';" src="/images/products/@Model.Product.ImageUrl" alt="Li's Product Image">
                             </a>
                         </div>
 
