--- a/simple-ecommerce/Views/Shared/_Layout.cshtml
+++ b/simple-ecommerce/Views/Shared/_Layout.cshtml
@@ -66,6 +66,7 @@
     <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
     <!-- jQuery-V1.12.4 -->
     <script src="/js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.5/signalr.min.js"></script>
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -204,6 +205,7 @@
                                         <li><a href="/Home/About">About Us</a></li>
                                         <li><a href="/Home/ContactUs">Contact</a></li>
                                         <li><a href="/Home/FAQ">FAQ</a></li>
+                                        <li><a href="/Chat/Index">Chat with Support</a></li>
                                          @if(User.Identity?.IsAuthenticated == true && User.IsInRole("Admin"))
                                          {
                                         <li><a href="/Admin/Index">Dashboard</a></li>
