--- a/simple-ecommerce/Views/Shared/_LayoutAdmin.cshtml
+++ b/simple-ecommerce/Views/Shared/_LayoutAdmin.cshtml
@@ -20,8 +20,7 @@
     <!-- Custom styles for this template-->
     <link href="/css/sb-admin-2.min.css" rel="stylesheet">
     <script src="/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.5/signalr.min.js"></script>
 </head>
 
 <body id="page-top">
@@ -214,74 +213,17 @@
                             <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-envelope fa-fw"></i>
-                                <!-- Counter - Messages -->
-                                <span class="badge badge-danger badge-counter">7</span>
+                                <span id="chatBadge" class="badge badge-danger badge-counter">0</span>
                             </a>
-                            <!-- Dropdown - Messages -->
+
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                  aria-labelledby="messagesDropdown">
-                                <h6 class="dropdown-header">
-                                    Message Center
-                                </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_1.svg"
-                                             alt="...">
-                                        <div class="status-indicator bg-success"></div>
-                                    </div>
-                                    <div class="font-weight-bold">
-                                        <div class="text-truncate">
-                                            Hi there! I am wondering if you can help me with a
-                                            problem I've been having.
-                                        </div>
-                                        <div class="small text-gray-500">Emily Fowler · 58m</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_2.svg"
-                                             alt="...">
-                                        <div class="status-indicator"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">
-                                            I have the photos that you ordered last month, how
-                                            would you like them sent to you?
-                                        </div>
-                                        <div class="small text-gray-500">Jae Chun · 1d</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_3.svg"
-                                             alt="...">
-                                        <div class="status-indicator bg-warning"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">
-                                            Last month's report looks great, I am very happy with
-                                            the progress so far, keep up the good work!
-                                        </div>
-                                        <div class="small text-gray-500">Morgan Alvarez · 2d</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
-                                             alt="...">
-                                        <div class="status-indicator bg-success"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">
-                                            Am I a good boy? The reason I ask is because someone
-                                            told me that people say this to all dogs, even if they aren't good...
-                                        </div>
-                                        <div class="small text-gray-500">Chicken the Dog · 2w</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
+                                <h6 class="dropdown-header">Message Center</h6>
+                                <div id="chatMessagesContainer"></div>
+                                <a class="dropdown-item text-center small text-gray-500" href="/AdminChat/Index">Read More Messages</a>
                             </div>
                         </li>
+
 
                         <div class="topbar-divider d-none d-sm-block"></div>
 
@@ -362,15 +304,15 @@
     <!-- Custom scripts for all pages-->
     <script src="/js/sb-admin-2.min.js"></script>
     <script>
-        const connection = new signalR.HubConnectionBuilder()
+        const connectionadmin = new signalR.HubConnectionBuilder()
             .withUrl("/adminHub")
             .build();
 
-        connection.on("NewOrderPlaced", function () {
+        connectionadmin.on("NewOrderPlaced", function () {
             refreshAdminAlerts();
         });
 
-        connection.start().catch(err => console.error(err));
+        connectionadmin.start().catch(err => console.error(err));
 
         function refreshAdminAlerts() {
             fetch('/Admin/AlertPartial')
@@ -379,6 +321,35 @@
                     document.getElementById("adminAlertArea").innerHTML = html;
                 });
         }
+    </script>
+
+    <script>
+               const connectionCh = new signalR.HubConnectionBuilder()
+            .withUrl("/chatHub")
+            .build();
+
+        connectionCh.start().then(() => console.log("SignalR connected"));
+
+        connectionCh.on("NewChatNotification", (roomId, message) => {
+            console.log("New message for room " + roomId + ": " + message);
+
+            // Update badge dynamically
+            const badge = document.getElementById("chatBadge");
+            badge.innerText = (parseInt(badge.innerText || 0) + 1);
+
+            // Add to dropdown
+            const container = document.getElementById("chatMessagesContainer");
+            const a = document.createElement("a");
+            a.className = "dropdown-item d-flex align-items-center";
+            a.href = `/AdminChat/Open/${roomId}`;
+            a.innerHTML = `
+                <div class="font-weight-bold">
+                    <div class="text-truncate">${message}</div>
+                    <div class="small text-gray-500">New</div>
+                </div>`;
+            container.prepend(a);
+        });
+
     </script>
 
 </body>
