--- a/simple-ecommerce/Views/Home/Index.cshtml
+++ b/simple-ecommerce/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 
 <!-- Begin Li's Content Wraper Area -->
 <div class="content-wraper pt-60 pb-60 pt-sm-30">
