works update localization done

--- a/simple-ecommerce/Views/Home/ProductDetails.cshtml
+++ b/simple-ecommerce/Views/Home/ProductDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@using simple_ecommerce.Models
+﻿@using ecommerce.Models
 @model ProductDetailsVM
 <!-- content-wraper start -->
 <div class="content-wraper">
