--- a/simple-ecommerce/Views/Shared/_Layout.cshtml
+++ b/simple-ecommerce/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                         <div class="col-lg-3 col-md-4">
                             <div class="header-top-left">
                                 <ul class="phone-wrap">
-                                    <li><span>Telephone Enquiry:</span><a href="#">(+123) 123 321 345</a></li>
+                                    <li><span>@Localizer["TelephoneEnquiry"]:</span><a href="#">(+123) 123 321 345</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -83,10 +83,10 @@
                                 <ul class="ht-menu">
                                     <!-- Begin Setting Area -->
                                     <li>
-                                        <div class="ht-setting-trigger"><span>Setting</span></div>
+                                        <div class="ht-setting-trigger"><span>@Localizer["Setting"]</span></div>
                                         <div class="setting ht-setting">
                                             <ul class="ht-setting-list">
-                                                <li><a href="login-register.html">My Account</a></li>
+                                                <li><a href="login-register.html">@Localizer["MyAccount"]</a></li>
                                                 
                                                 @if (User.Identity?.IsAuthenticated == true)
                                                 {
